--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 /* Estilização Geral */
 body {
     font-family: 'Open Sans', sans-serif;
-    background-color: #f9f9f9;
+    /*background-color: #f9f9f9; */
     margin: 20px;
     font-size: 16px;
     line-height: 1.6;
