--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1 {
     font-weight: bold;
     text-align: left;
     color: var(--highlight-color);
-    cursor: pointer;
+    /*cursor: pointer;*/
     transition: transform 0.2s ease-in-out;
 }
 
