--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@ h1 {
     transition: transform 0.2s ease-in-out;
 }
 
-h1:hover {
+/*h1:hover {
     transform: scale(1.05);
-}
+}*/
 
 h2 {
     font-size: 1.3em;
