--- a/style.css
+++ b/style.css
@@ -63,7 +63,8 @@ h3 {
     font-weight: bold;
     text-align: left;
     color: var(--highlight-color);
-    margin-bottom: 8px;
+    margin-top: 10px;
+    margin-bottom: 0px;
 }
 
 /* Negrito com cor variável */
