Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -21,24 +21,23 @@ body {
 }
 
 h1 {
-    font-size: 30px;
+    font-size: 29px;
     font-weight: 900; /* Deixa o título mais grosso */
     text-align: left;
+    margin-bottom: 6px;
     color: var(--highlight-color);
     cursor: pointer;
     transition: transform 0.9s ease-in-out;
 }
-/*
-h1:hover {
-    transform: scale(1.05);*/
-}
 
 h2 {
-    font-size: 22px !important;
-    font-weight: 400 !important;
+    font-size: 19px;
+    font-weight: 100;
     text-align: left;
     color: var(--text-gray);
-    margin-bottom: 5px;
+    margin-bottom: 20px;
+    margin-top: 9px;
+    line-height: 1.2;
 }
 
 h2 .biblia {
@@ -46,12 +45,17 @@ h2 .biblia {
 }
 
 h3 {
-    font-size: 20px;
+    font-size: 25px;
     text-align: left;
     color: var(--highlight-color);
-    margin-top: 10px;
-    margin-bottom: 0px;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
+
+ul li {
+    margin-bottom: 15px; /* Ajuste o valor conforme necessário */
+}
+
 
 strong {
     color: var(--highlight-color);
@@ -62,41 +66,30 @@ strong {
     color: var(--biblia-color);
 }
 
-/* Listas */
-ul {
-    margin-top: 10px;
-    margin-bottom: 10px;
+/* Listas normais (sem bullets) */
+.schedule {
+    list-style: none;
+    padding-left: 0;
 }
 
-ul li {
-    font-size: 18px;
-    margin-bottom: 8px;
-}
-
-/* Bullet points */
-.sub-list {
-    padding-left: 30px;
-    list-style-type: disc;
+/* Bullet points SOMENTE para SÉRIE DE DISCURSOS */
+.series-discursos {
+    list-style: disc;
+    padding-left: 20px; /* Garante espaço para os bullets */
 }
 
 /* Caixa de texto de anotações */
+
 textarea {
-    width: 100%;
-    padding: 8px;
-    font-size: 18px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    resize: none;
-    overflow: hidden;
-    margin-top: 5px;
+    width: 90%;
+    max-width: 500px;
+    font-size: 16px;
     display: none;
-    height: auto;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
     opacity: 0;
-    transform: scale(1.0);
-    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+    transition: opacity 0.3s ease-in-out;
+    resize: none; /* Impede redimensionamento manual */
+    overflow: hidden; /* Impede barra de rolagem */
+    min-height: 40px; /* Altura mínima inicial */
 }
 
 textarea.show {
